# OpenJailbreak

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  SETUP.md  kaggle_writeup.md  pyproject.toml  requirements.txt
assets/series_configs/: series_simple.json
docs/: CLI_REFERENCE.md  DEVELOPER_GUIDE.md  EXAMPLES.md  USER_GUIDE.md
examples/: universal_attack.py  universal_attack_series.py
examples/config/: __init__.py  dynamic_args_parser.py
examples/scripts/: test_abj_attack.sh  test_attacks.sh  test_comprehensive.py  test_mousetrap.sh  test_query_attack.sh  test_series_attack.sh  test_wiki_text_infilling.sh
src/autojailbreak/: __init__.py  artifact.py  config.py
src/autojailbreak/attacks/: __init__.py  abj_attack.py  base.py  factory.py  mousetrap.py  past_tense_attack.py  query_attack.py  registry.py  translate_chain.py  wiki_text_infilling.py
src/autojailbreak/defenses/: __init__.py  dictionary.py  perplexity.py  retokenization.py  smoothllm.py
src/autojailbreak/evaluation/: __init__.py  base.py  gsm8k_evaluator.py  wmdp_evaluator.py
src/autojailbreak/llm/: base.py  litellm.py  vllm.py
src/autojailbreak/utils/: pair_utils.py
tests/: __init__.py  test_dataset.py  test_dataset_evaluator_integration.py  test_gsm8k_evaluator.py  test_model_integration.py  test_wmdp_evaluator.py
